--- a/mm/templates/account-types.html
+++ b/mm/templates/account-types.html
@@ -70,17 +70,17 @@
       <table class="table">
         <tr>
           <th></th>
-          <th class="table__mini-th">
+          <th class="hover-mini  mini-th">
             <b>Mini</b>
             <p>Basic Exchange<br>For Beginners</p>
             <span>$500</span>
           </th>
-          <th class="table__classic-th">
+          <th class="hover-classic  classic-th">
             <b>Classic</b>
             <p>For Skilled<br>Investors</p>
             <span>$5000</span>
           </th>
-          <th class="table__premium-th">
+          <th class="hover-premium  premium-th">
             <b>Premium</b>
             <p>Advanced Transaction<br>For Experienced Investors</p>
             <span>$20000</span>
@@ -88,80 +88,80 @@
         </tr>
         <tr>
           <td>Online Chat Support</td>
-          <td class="table__check-g  table__mini-td-d"></td>
-          <td class="table__check-g  table__classic-td-d"></td>
-          <td class="table__check-g  table__premium-td-d"></td>
+          <td class="table__check-g  hover-mini  mini-d"></td>
+          <td class="table__check-g  hover-classic  classic-d"></td>
+          <td class="table__check-g  hover-premium  premium-d"></td>
         </tr>
         <tr>
           <td>Platforms: MT4 & Mobile</td>
-          <td class="table__check-g  table__mini-td-l"></td>
-          <td class="table__check-g  table__classic-td-l"></td>
-          <td class="table__check-g  table__premium-td-l"></td>
+          <td class="table__check-g  hover-mini  mini-l"></td>
+          <td class="table__check-g  hover-classic  classic-l"></td>
+          <td class="table__check-g  hover-premium  premium-l"></td>
         </tr>
         <tr>
           <td>Instruments: Forex, CFDs & Commodities</td>
-          <td class="table__check-g  table__mini-td-d"></td>
-          <td class="table__check-g  table__classic-td-d"></td>
-          <td class="table__check-g  table__premium-td-d"></td>
+          <td class="table__check-g  hover-mini  mini-d"></td>
+          <td class="table__check-g  hover-classic  classic-d"></td>
+          <td class="table__check-g  hover-premium  premium-d"></td>
         </tr>
         <tr>
           <td>E-book for free</td>
-          <td class="table__check-g  table__mini-td-l"></td>
-          <td class="table__check-g  table__classic-td-l"></td>
-          <td class="table__check-g  table__premium-td-l"></td>
+          <td class="table__check-g  hover-mini  mini-l"></td>
+          <td class="table__check-g  hover-classic  classic-l"></td>
+          <td class="table__check-g  hover-premium  premium-l"></td>
         </tr>
         <tr>
           <td>Specific Competitive Spreads & Commissions</td>
-          <td class="table__check-g  table__mini-td-d"></td>
-          <td class="table__check-g  table__classic-td-d"></td>
-          <td class="table__check-g  table__premium-td-d"></td>
+          <td class="table__check-g  hover-mini  mini-d"></td>
+          <td class="table__check-g  hover-classic  classic-d"></td>
+          <td class="table__check-g  hover-premium  premium-d"></td>
         </tr>
         <tr>
           <td>Access to Breaking News & Market Studies</td>
-          <td class="table__check-g  table__mini-td-l"></td>
-          <td class="table__check-g  table__classic-td-l"></td>
-          <td class="table__check-g  table__premium-td-l"></td>
+          <td class="table__check-g  hover-mini  mini-l"></td>
+          <td class="table__check-g  hover-classic  classic-l"></td>
+          <td class="table__check-g  hover-premium  premium-l"></td>
         </tr>
         <tr>
           <td>Online Phone Support</td>
-          <td class="table__check-r  table__mini-td-d"></td>
-          <td class="table__check-g  table__classic-td-d"></td>
-          <td class="table__check-g  table__premium-td-d"></td>
+          <td class="table__check-r  hover-mini  mini-d"></td>
+          <td class="table__check-g  hover-classic  classic-d"></td>
+          <td class="table__check-g  hover-premium  premium-d"></td>
         </tr>
         <tr>
           <td>Simultaneous Trading Signals</td>
-          <td class="table__check-r  table__mini-td-l"></td>
-          <td class="table__check-g  table__classic-td-l"></td>
-          <td class="table__check-g  table__premium-td-l"></td>
+          <td class="table__check-r  hover-mini  mini-l"></td>
+          <td class="table__check-g  hover-classic  classic-l"></td>
+          <td class="table__check-g  hover-premium  premium-l"></td>
         </tr>
         <tr>
           <td>Trading Education Package</td>
-          <td class="table__check-r  table__mini-td-d"></td>
-          <td class="table__check-g  table__classic-td-d"></td>
-          <td class="table__check-g  table__premium-td-d"></td>
+          <td class="table__check-r  hover-mini  mini-d"></td>
+          <td class="table__check-g  hover-classic  classic-d"></td>
+          <td class="table__check-g  hover-premium  premium-d"></td>
         </tr>
         <tr>
           <td>Account helping Team Available 24/7</td>
-          <td class="table__check-r  table__mini-td-l"></td>
-          <td class="table__check-r  table__classic-td-l"></td>
-          <td class="table__check-g  table__premium-td-l"></td>
+          <td class="table__check-r  hover-mini  mini-l"></td>
+          <td class="table__check-r  hover-classic  classic-l"></td>
+          <td class="table__check-g  hover-premium  premium-l"></td>
         </tr>
         <tr>
           <td>Trade Mentor</td>
-          <td class="table__check-r  table__mini-td-d"></td>
-          <td class="table__check-r  table__classic-td-d"></td>
-          <td class="table__check-g  table__premium-td-d"></td>
+          <td class="table__check-r  hover-mini  mini-d"></td>
+          <td class="table__check-r  hover-classic  classic-d"></td>
+          <td class="table__check-g  hover-premium  premium-d"></td>
         </tr>
         <tr>
           <td></td>
-          <td class="table__mini-td-l">
-            <a class="button  button--table  button--mini" href="https://client.multiplymarket.com/en/members/register/real">Open account</a>
+          <td class="hover-mini  mini-btn">
+            <a class="button  button--table" href="https://client.multiplymarket.com/en/members/register/real">Open account</a>
           </td>
-          <td class="table__classic-td-l">
-            <a class="button  button--table  button--classic" href="https://client.multiplymarket.com/en/members/register/real">Open account</a>
+          <td class="hover-classic  classic-btn">
+            <a class="button  button--table" href="https://client.multiplymarket.com/en/members/register/real">Open account</a>
           </td>
-          <td class="table__premium-td-l">
-            <a class="button  button--table  button--premium" href="https://client.multiplymarket.com/en/members/register/real">Open account</a>
+          <td class="hover-premium  premium-btn">
+            <a class="button  button--table" href="https://client.multiplymarket.com/en/members/register/real">Open account</a>
           </td>
         </tr>
       </table>
@@ -238,6 +238,6 @@
       <p>© 2017 ALL right reserved MultiplyMarket</p>
     </div>
   </footer>
-  <script src="../js/test.js"></script>
+  <script src="../js/table.js"></script>
 </body>
 </html>
