--- a/borsa/css/style.css
+++ b/borsa/css/style.css
@@ -1214,3 +1214,145 @@ body {
     font-size: 18px;
     font-family: 'Open Sans Regular', sans-serif;
     text-decoration: none; }
+
+.popup {
+  width: 340px;
+  left: 50%;
+  padding: 30px;
+  border-radius: 10px;
+  background: #f1f4f4;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  -webkit-transition: 0.6s;
+  transition: 0.6s;
+  z-index: 20; }
+  .popup--show {
+    position: fixed;
+    top: 50%; }
+  .popup--hide {
+    position: absolute;
+    top: -500px; }
+  .popup b {
+    display: block;
+    color: #000;
+    font-size: 25px;
+    font-family: 'ProximaNovaBold', sans-serif; }
+  .popup small {
+    font-family: 'ProximaNovaLight', sans-serif; }
+  .popup p {
+    margin: 0 0 10px 0;
+    color: #29a643;
+    font-size: 14px;
+    font-family: 'ProximaNovaLight', sans-serif; }
+  .popup a {
+    color: #8e8e8e;
+    font-size: 12px;
+    font-family: 'ProximaNovaBold', sans-serif;
+    text-decoration: none; }
+  .popup form {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    margin: 20px 0 0; }
+    .popup form input {
+      margin-bottom: 10px;
+      padding: 10px 15px;
+      font-size: 14px;
+      font-family: 'ProximaNovaLight', sans-serif;
+      border: 1px solid #29a643;
+      border-radius: 5px;
+      opacity: 0.8;
+      -webkit-transition: 0.5s;
+      transition: 0.5s; }
+      .popup form input:focus {
+        opacity: 1; }
+      .popup form input::-webkit-input-placeholder {
+        font-size: 14px; }
+      .popup form input:-ms-input-placeholder {
+        font-size: 14px; }
+      .popup form input::-ms-input-placeholder {
+        font-size: 14px; }
+      .popup form input::placeholder {
+        font-size: 14px; }
+    .popup form select {
+      color: #8e8e8e;
+      height: 38px;
+      margin-bottom: 10px;
+      font-size: 14px;
+      border: 1px solid #29a643;
+      text-indent: 5px; }
+    .popup form button[type="submit"] {
+      width: 150px;
+      height: 30px;
+      margin-left: 64px;
+      padding: 5px 0;
+      color: #fff;
+      font-size: 15px;
+      font-family: 'ProximaNovaBold', sans-serif;
+      border: none;
+      border-radius: 5px;
+      background: #f31112; }
+
+.popup__submit {
+  margin-top: 20px !important; }
+
+.popup--signin .popup__submit button {
+  margin-left: 63px !important; }
+
+.popup--regi button {
+  margin: auto !important; }
+
+.popup__links {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+  justify-content: space-around;
+  margin-top: 10px !important; }
+
+.popup__real {
+  padding: 10px 15px;
+  color: #fff !important;
+  border-radius: 5px;
+  background: #f31112; }
+
+.popup__demo {
+  padding: 10px 15px;
+  color: #8e8e8e;
+  border-radius: 5px;
+  background: #fff; }
+
+.popup__close {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  width: 13px;
+  height: 13px;
+  border: none;
+  background: url("../img/close.svg") no-repeat top;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  cursor: pointer; }
+  .popup__close:hover {
+    -webkit-transform: rotate(90deg);
+    transform: rotate(90deg); }
+
+.popup__overlay {
+  overflow: auto;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.8);
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+  z-index: 15; }
+  .popup__overlay--show {
+    position: fixed;
+    opacity: 1; }
+  .popup__overlay--hide {
+    opacity: 0; }
