--- a/borsa/sass/blocks/table.scss
+++ b/borsa/sass/blocks/table.scss
@@ -53,6 +53,29 @@
     font-size: 18px;
     font-family: 'Open Sans Bold', sans-serif;
   }
+  
+  &--spread {
+    width: 100%;
+    margin: 20px 0;
+    font-size: 15px;
+    font-family: 'Open Sans Regular', sans-serif;
+    border-collapse: collapse;
+    
+    tr {
+      height: 40px;
+    }
+    
+    tbody {
+      border-top: none;
+      border-bottom: 1px solid #efe7e7;
+      border-left: 1px solid #efe7e7;
+      border-right: 1px solid #efe7e7;
+
+      & tr:nth-of-type(odd) {
+        background: #f9f9f9;
+      }
+    }
+  }
 }
 
 .table__check-g {
