--- a/mb/sass/style.scss
+++ b/mb/sass/style.scss
@@ -12,6 +12,7 @@
 @import 'blocks/steps';
 @import 'blocks/profit';
 @import 'blocks/ssl';
+@import 'blocks/comment';
 @import 'blocks/easy';
 @import 'blocks/type';
 @import 'blocks/footer';
