--- a/mb/sass/style.scss
+++ b/mb/sass/style.scss
@@ -11,6 +11,7 @@
 @import 'blocks/price';
 @import 'blocks/steps';
 @import 'blocks/profit';
+@import 'blocks/range';
 @import 'blocks/ssl';
 @import 'blocks/comment';
 @import 'blocks/easy';
