--- a/mb/css/style.css
+++ b/mb/css/style.css
@@ -645,34 +645,83 @@ body {
       font-size: 23px; } }
 
 .range {
-  padding: 70px 0 100px 0; }
+  padding: 70px 0 76px 0; }
   .range h1 {
     margin: 0 0 80px 0;
     color: #051c4f;
     font-size: 35px;
     font-family: 'ProximaNovaBold', sans-serif;
     text-align: center; }
-  .range input[type="range"] {
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-    width: 500px;
-    height: 15px;
-    outline: none;
-    background: -webkit-linear-gradient(left, #051c4f 0%, #051c4f 50%, #ddd 50%, #ddd 100%); }
-  .range input[type="range"]::-webkit-slider-thumb {
-    position: relative;
-    top: 30px;
-    -webkit-appearance: none;
-    appearance: none;
-    width: 25px;
-    height: 25px;
-    background: url("../img/range-arrow.png") no-repeat top;
-    background-size: cover;
-    cursor: pointer; }
-  .range #values label {
-    font-size: 200px;
-    color: red; }
+  .range label {
+    font-size: 24px;
+    font-family: 'ProximaNovaLight', sans-serif; }
+    .range label:nth-child(2) p {
+      margin: 70px 0 24px 0; }
+  .range hr {
+    height: 1px;
+    margin: 70px 0 40px 0;
+    border: none;
+    background: #000;
+    outline: none; }
+    .range hr + p {
+      font-size: 26px;
+      font-family: 'ProximaNovaLight', sans-serif;
+      text-align: center; }
+      .range hr + p span {
+        color: #051c4f;
+        font-size: 28px;
+        font-family: 'ProximaNovaBold', sans-serif; }
+
+.range__flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+  justify-content: space-around;
+  -webkit-box-align: end;
+  -ms-flex-align: end;
+  align-items: flex-end; }
+
+.range__left input[type="range"] {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  width: 500px;
+  height: 15px;
+  outline: none;
+  background: -webkit-gradient(linear, left top, right top, from(#051c4f), color-stop(50%, #051c4f), color-stop(50%, #ddd), to(#ddd));
+  background: linear-gradient(left, #051c4f 0%, #051c4f 50%, #ddd 50%, #ddd 100%); }
+
+.range__left input[type="range"]::-webkit-slider-thumb {
+  position: relative;
+  top: 30px;
+  -webkit-appearance: none;
+  appearance: none;
+  width: 25px;
+  height: 25px;
+  background: url("../img/range-arrow.png") no-repeat top;
+  background-size: cover;
+  cursor: pointer; }
+
+.range__right input {
+  width: 300px !important; }
+
+.range__right progress {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  width: 350px;
+  height: 40px; }
+  .range__right progress[value]::-webkit-progress-bar {
+    background: #ddd; }
+  .range__right progress[value]::-webkit-progress-value {
+    background: -webkit-gradient(linear, left top, right top, from(#051c4f), to(#000));
+    background: linear-gradient(left, #051c4f 0%, #000 100%); }
+
+.range__invest-output,
+.range__get-output {
+  color: #051c4f;
+  font-family: 'ProximaNovaBold', sans-serif; }
 
 .ssl {
   padding: 70px 0;
