--- a/forexglobal/sass/style.scss
+++ b/forexglobal/sass/style.scss
@@ -6,3 +6,6 @@
 @import 'blocks/title';
 @import 'blocks/header';
 @import 'blocks/nav';
+@import 'blocks/welcome';
+@import 'blocks/edge';
+@import 'blocks/account';
