--- a/mm/templates/terms.html
+++ b/mm/templates/terms.html
@@ -68,6 +68,7 @@
         <b>Disclaimer</b>
           <p>You should familiarize yourself with the things listed here. When you enter the website and its subdomains, you are accepting to abide by the stated terms and conditions. In case you are in a disagreement with them, then you should not enter the website.</p>
           <p>Copyright for the pages and for the screens displaying the pages, and for the information and material therein and in their arrangement, is owned by © 2017. VACENTY FINANCE LIMITED All Rights Reserved. Registered in Marshall Islands, Trust Company Complex, Ajelatake Road, Ajelatake Island, Majuro. Marshall Islands, MH96960(henceforth: “MultiplyMarket”) unless otherwise indicated.</p>
+          <p>Credit card processing by Granit oak worldwide limited with registration no. HE372160, an office address Igoumenitsa 12 CONNECTEDSKY HOUSE Strovolos, 2027, Nicosia, Cyprus</p>
         <b>Trademarks</b>
           <p>MultiplyMarket is trademark and service mark of VACENTY FINANCE LIMITED and it used and/or registered throughout the world. VACENTY FINANCE LIMITED and its subsidiaries also claim rights in certain other trademarks and service marks contained in these web pages.</p>
           <p>Copies of the contents may be viewed and downloaded for your own personal non-commercial use, provided that any copy contains this Copyright/Disclaimer Notice. The contents may not otherwise be used in whole or in part in any manner without the prior written consent of MultiplyMarket.</p>
