--- a/forexglobal/css/style.css
+++ b/forexglobal/css/style.css
@@ -221,7 +221,10 @@ body {
       font-size: 18px;
       font-family: 'SFUIDisplay-Thin', sans-serif;
       text-decoration: none;
-      border: 1px solid #fac93e; }
+      border: 1px solid #fac93e;
+      border-radius: 3px;
+      -webkit-transition: 0.3;
+      transition: 0.3; }
 
 .nav {
   display: -webkit-box;
@@ -229,7 +232,10 @@ body {
   display: flex;
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
-  justify-content: space-between; }
+  justify-content: space-between;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center; }
 
 .nav {
   padding: 18px 15px; }
