--- a/mb/sass/blocks/nav.scss
+++ b/mb/sass/blocks/nav.scss
@@ -13,3 +13,13 @@
   padding: 0;
   list-style: none;
 }
+
+@media screen and ($tablet-widths) {
+  
+}
+
+@media screen and ($mobile-widths) {
+  .nav__list {
+    display: none;
+  }
+}
